# ZdepthLossy

./: CMakeLists.txt  README.md
codecs/: CMakeLists.txt
codecs/include/: VideoCodec.hpp
codecs/nvcuvid/: CMakeLists.txt
codecs/nvcuvid/include/: NvEncoderCuda.h
include/: zdepth.hpp  zdepthcaller.hpp
src/: zdepth.cpp  zdepthcaller.cpp
zstd/: CMakeLists.txt
